--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Innovation Hub, Tech City</span>
+                            <span>Innovation Hub, Makerere University</span>
                         </div>
                     </div>
                     
