feat: Update 404 page messaging and enhance index page title and descriptions for clarity

--- a/404.html
+++ b/404.html
@@ -229,7 +229,7 @@
         <h1 class="error-title">Page Not Found</h1>
         <p class="error-message">
             The page you're looking for seems to have taken a coffee break. 
-            Let's get you back on track to bridging the gap between classroom and industry!
+            Let's get you back on track to bridging the gap between business and technology!
         </p>
         
         <div class="action-buttons">
