--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="TheGeeksInfo - Bridging the gap between classroom and industry through innovative software engineering services and education">
     <meta name="keywords" content="software engineering, education, training, development, technology, startup">
     <meta name="author" content="TheGeeksInfo">
-    <title>TheGeeksInfo - Bridging Classroom & Industry</title>
+    <title>TheGeeksInfo - Bridging Business & Technology</title>
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="TheGeeksInfo - Bridging Classroom & Industry">
@@ -129,7 +129,7 @@
                     <span class="gradient-text">Classroom & Industry</span>
                 </h1>
                 <p class="hero-subtitle animate-fade-in-delay">
-                    Empowering the next generation of software engineers to create real products that customers buy, transforming industries with cutting-edge AI solutions, manufacturing expertise, and intelligent automation that goes beyond coding
+                    Empowering the next generation of businesses and software engineers to create real products that customers buy, transforming industries with cutting-edge AI solutions, manufacturing expertise, and intelligent automation that goes beyond coding
                 </p>
                 <div class="hero-buttons animate-fade-in-delay-2">
                     <a href="#services" class="btn-primary">Our Services</a>
@@ -956,13 +956,16 @@
             </div>
             <div class="modal-body">
                 <iframe id="applicationForm" 
-                        src="https://docs.google.com/forms/d/e/1T7bWtCCtISizNi-lyKihouHgIbTaSfZRX2ah1Vn3dT4/viewform?embedded=true" 
+                        src="https://docs.google.com/forms/d/e/1FAIpQLSfGxZJ6nQY6RK8lWj0H6Y0Z0P3T7bWtCCtISizNi-lyKihouHg/viewform?embedded=true" 
                         width="100%" 
                         height="600" 
                         frameborder="0" 
                         marginheight="0" 
-                        marginwidth="0">
-                    Loading…
+                        marginwidth="0"
+                        onload="console.log('Form loaded successfully')"
+                        onerror="console.error('Form failed to load')">
+                    <p>Loading application form...</p>
+                    <p>If the form doesn't load, please <a href="https://docs.google.com/forms/d/1T7bWtCCtISizNi-lyKihouHgIbTaSfZRX2ah1Vn3dT4/viewform" target="_blank">click here to open it in a new tab</a>.</p>
                 </iframe>
             </div>
         </div>
