feat: Change "Training Programs" button style to primary for improved visibility

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </p>
                 <div class="hero-buttons animate-fade-in-delay-2">
                     <a href="#services" class="btn-primary">Our Services</a>
-                    <a href="#programs" class="btn-secondary">Training Programs</a>
+                    <a href="#programs" class="btn-primary">Training Programs</a>
                 </div>
             </div>
             <div class="hero-visual">
