feat: Update service description to clarify offerings in software development

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <h3>Custom Software Development</h3>
                     <p>Tailored software solutions built with modern technologies and industry best practices.</p>
                     <ul>
-                        <li>Web Applications</li>
+                        <li>Web Applications and sites</li>
                         <li>Mobile Apps</li>
                         <li>Desktop Software</li>
                         <li>API Development</li>
