feat: Update descriptions to emphasize bridging business and technology

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="TheGeeksInfo - Bridging the gap between classroom and industry through innovative software engineering services and education">
+    <meta name="description" content="TheGeeksInfo - Bridging the gap between Business and Technology through innovative software engineering services and education">
     <meta name="keywords" content="software engineering, education, training, development, technology, startup">
     <meta name="author" content="TheGeeksInfo">
     <title>TheGeeksInfo - Bridging Business & Technology</title>
@@ -899,7 +899,7 @@
                              onerror="this.style.opacity='0.5'">
                         <span>TheGeeksInfo</span>
                     </div>
-                    <p>Bridging the gap between classroom and industry through innovative software engineering and education.</p>
+                    <p>Bridging the gap between Business and Technology through innovative software engineering and education.</p>
                 </div>
                 
                 <div class="footer-section">
@@ -955,18 +955,23 @@
                 <span class="close-modal">&times;</span>
             </div>
             <div class="modal-body">
-                <iframe id="applicationForm" 
-                        src="https://docs.google.com/forms/d/e/1FAIpQLSfGxZJ6nQY6RK8lWj0H6Y0Z0P3T7bWtCCtISizNi-lyKihouHg/viewform?embedded=true" 
-                        width="100%" 
-                        height="600" 
-                        frameborder="0" 
-                        marginheight="0" 
-                        marginwidth="0"
-                        onload="console.log('Form loaded successfully')"
-                        onerror="console.error('Form failed to load')">
-                    <p>Loading application form...</p>
-                    <p>If the form doesn't load, please <a href="https://docs.google.com/forms/d/1T7bWtCCtISizNi-lyKihouHgIbTaSfZRX2ah1Vn3dT4/viewform" target="_blank">click here to open it in a new tab</a>.</p>
-                </iframe>
+                <div style="text-align: center; padding: 40px 20px;">
+                    <i class="fas fa-file-alt" style="font-size: 4rem; color: #667eea; margin-bottom: 20px;"></i>
+                    <h3 style="margin-bottom: 15px; color: #333;">Application Form</h3>
+                    <p style="margin-bottom: 30px; color: #666;">Click the button below to open our application form in a new tab.</p>
+                    <a href="https://docs.google.com/forms/d/1T7bWtCCtISizNi-lyKihouHgIbTaSfZRX2ah1Vn3dT4/viewform" 
+                       target="_blank" 
+                       class="btn-primary" 
+                       style="display: inline-block; padding: 12px 24px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: transform 0.2s;"
+                       onmouseover="this.style.transform='translateY(-2px)'"
+                       onmouseout="this.style.transform='translateY(0)'">
+                        <i class="fas fa-external-link-alt" style="margin-right: 8px;"></i>
+                        Open Application Form
+                    </a>
+                    <p style="margin-top: 20px; font-size: 0.9rem; color: #888;">
+                        The form will open in a new tab for the best experience.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
