--- a/index.html
+++ b/index.html
@@ -892,11 +892,11 @@
                              class="logo-image"
                              width="40" 
                              height="40"
-                             loading="lazy"
-                             decoding="async"
-                             fetchpriority="low"
+                             loading="eager"
+                             decoding="sync"
+                             fetchpriority="high"
                              onload="this.style.opacity='1'"
-                             onerror="this.style.opacity='0.5'">
+                             onerror="this.style.opacity='0.5'; console.warn('Footer logo load failed');">
                         <span>TheGeeksInfo</span>
                     </div>
                     <p>Bridging the gap between Business and Technology through innovative software engineering and education.</p>
