--- a/index.html
+++ b/index.html
@@ -887,17 +887,10 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <img src="assets/images/logo300x300.png" 
-                             alt="TheGeeksInfo Logo" 
-                             class="logo-image"
-                             width="40" 
-                             height="40"
-                             loading="eager"
-                             decoding="sync"
-                             fetchpriority="high"
-                             onload="this.style.opacity='1'"
-                             onerror="this.style.opacity='0.5'; console.warn('Footer logo load failed');">
-                        <span>TheGeeksInfo</span>
+                        <div class="footer-logo-text">
+                            <i class="fas fa-code" style="margin-right: 8px; color: #667eea;"></i>
+                            <span>TheGeeksInfo</span>
+                        </div>
                     </div>
                     <p>Bridging the gap between Business and Technology through innovative software engineering and education.</p>
                 </div>
