--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link cta-button">Get Started</a>
+                    <a href="#contact" class="nav-link cta-button">Get Started</a>
                 </li>
             </ul>
             <div class="hamburger" id="hamburger">
